tests/hep27_const_numeric_invalid_position_bad.hop
// Verifies HEP 27 const numeric invalid position is rejected.
fn main() {
	var x const_int = 1
	_ = x
}
